--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,64 +1,66 @@
 * {
     font-family: "FiraCode Nerd Font", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-weight: bold;
     font-size: 12px;
-    margin: 2px 0px 0px 0px;
-    padding: 0 10px;
+    font-weight: bold;
+    margin: 0px 0px 0px 0px;
+    padding: 0 0px;
 }
 
 window#waybar {
-    background-color: rgba(0, 0, 0, 0.0);
+    background-color: #32302f;
+    border-radius: 5px;
+    border: 2px solid #fbf1c7;
     color: #c0caf5;
 }
 
 #workspaces button {
-    border: 2px solid #fbf1c7;
-    border-radius: 5px;
+    border-top: 2px solid #fbf1c7;
+    border-radius: 0px;
+    border-bottom: 2px solid #fbf1c7;
     background-color: #32302f;
     color: #fbf1c7;
-    padding: 1 0px;
-    margin: 2;
+    padding: 5px 10px;
 }
 
+#workspaces button:nth-child(1) {
+    border-left: 2px solid #fbf1c7;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+
+
 #workspaces button:hover {
-    border: 2px solid #ffffff;
     box-shadow: none;
 }
 
 #workspaces button.active {
-    border: 2px solid white;
+    border: 2px solid #fbf1c7;
     background: #4c4642;
 }
 
 #clock {
     color: #fbf1c7;
-    border-radius: 5px;
-    border: 2px solid #fbf1c7;
+    border-top: 2px solid #fbf1c7;
+    border-bottom: 2px solid #fbf1c7;
     background-color: #32302f;
-}
-
-#clock:hover {
-    border: 2px solid white;
 }
 
 #network {
     background-color: #32302f;
     border: 2px solid #fbf1c7;
-    border-radius: 5px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 5px 10px;
     color: #fbf1c7;
-}
-
-#network:hover {
-    border: 2px solid white;
 }
 
 #pulseaudio {
     border: 2px solid #fbf1c7;
-    border-radius: 5px;
+    padding: 5px 10px;
     background-color: #32302f;
     color: #fbf1c7;
-}
-
-#pulseaudio:hover {
-    border: 2px solid white;
 }
