--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -38,6 +38,7 @@ window#waybar {
     border-top: 2px solid #fbf1c7;
     border-bottom: 2px solid #fbf1c7;
     background-color: #32302f;
+    padding: 3px 0px 0px 0px;
 }
 
 #network {
